[package]
name = "lang-c"
version = "0.8.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
license = "MIT/Apache-2.0"
description = "Lightweight C parser"
include = [ "/src/**/*.rs", "Cargo.toml", "/LICENSE*", "/README.md" ]
documentation = "https://docs.rs/lang-c"
homepage = "https://github.com/vickenty/lang-c"
repository = "https://github.com/vickenty/lang-c"
keywords = [ "ast", "c", "parser", "c-language" ]
categories = [ "parser-implementations" ]

[badges]
travis-ci = { repository = "vickenty/lang-c" }
